tests/machine/x/kt/substring_builtin.error
Error on line 0: kotlinc error: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kt/substring_builtin.kt:2:10: error: unresolved reference: substring
	println(substring("mochi", 1, 4))
         ^

1: fun main() {
